@@ -13,33 +13,33 @@
 #endif
 
 #ifdef ALPHA_WARN_UNUSED
-#define ALPHA_UNUSED(_var_) Alpha::Logger::Warn("Unused variable {0}", #_var_);
+#define ALPHA_UNUSED(var) Alpha::Logger::Warn("Unused variable {0}", #var);
 #else
-#define ALPHA_UNUSED(_var_) (void) _var_;
+#define ALPHA_UNUSED(var) (void) var;
 #endif
 
 #ifdef ALPHA_ENABLE_ASSERT
-#define ALPHA_ASSERT(_expr_, _msg_) \
-	if (!(_expr_)) \
+#define ALPHA_ASSERT(expr, msg) \
+	if (!(expr)) \
 	{ \
-		Alpha::Logger::Error(std::string("[Assert] ") + std::string(_msg_)); \
+		Alpha::Logger::Error(std::string("[Assert] ") + std::string(msg)); \
 		Alpha::Logger::Info("Shutdown: AlphaEngine"); \
 		Alpha::ForceQuit(); \
 	} 
 #else
-#define ALPHA_ASSERT(_expr_, _msg_)
+#define ALPHA_ASSERT(expr, msg)
 #endif
 
 #ifdef ALPHA_ENABLE_CHECK
-#define ALPHA_CHECK(_expr_, _msg_) \
-	if (!(_expr_)) \
+#define ALPHA_CHECK(expr, msg) \
+	if (!(expr)) \
 	{ \
-		Alpha::Logger::Error(std::string("[Check] ") + std::string(_msg_)); \
+		Alpha::Logger::Error(std::string("[Check] ") + std::string(msg)); \
 		Alpha::Logger::Info("Shutdown: AlphaEngine"); \
 		Alpha::ForceQuit(); \
 	} 
 #else
-#define ALPHA_CHECK(_expr_, _msg_) _expr_
+#define ALPHA_CHECK(expr, msg) expr
 #endif
 
-#define ALPHA_BIND_EVENT(_fn_, _ref_) std::bind(&_fn_, _ref_, std::placeholders::_1)
+#define ALPHA_BIND_EVENT(fn, ref) std::bind(&fn, ref, std::placeholders::_1)
