@@ -3,7 +3,7 @@
 #include "EngineMinimal.h"
 
 #include <Alpha/Input/Input.h>
-#include <Alpha/Input/DefaultInput/DefaultInputImpl.h>
+#include <Alpha/Input/DefaultInput/DefaultInput.h>
 
 namespace Alpha
 {
