@@ -1,0 +1,6 @@
+#include "OpenGLFramebuffer.h"
+
+namespace Alpha
+{
+
+}
