@@ -1,33 +1,33 @@
-#include "DefaultInputImpl.h"
+#include "DefaultInput.h"
 
 #include <Alpha/Application/Application.h>
 #include <GLFW/glfw3.h>
 
 namespace Alpha
 {
-    Input* Input::s_instance = new DefaultInputImpl();
+    Input* Input::s_instance = new DefaultInput();
 
-    DefaultInputImpl::DefaultInputImpl()
+    DefaultInput::DefaultInput()
     {
-        Logger::Info("Use engine default inputs implementation");
+        Logger::Info("Input system: Use DefaultInput");
         Logger::Warn("AlphaEngine supports only US keyboard binding (aka QWERTY)");
     }
 
-    bool DefaultInputImpl::IsKeyPressedImpl(int keyCode)
+    bool DefaultInput::IsKeyPressedImpl(int keyCode)
     {
         auto window = static_cast<GLFWwindow*>(Application::Get().GetWindow()->GetNativeWindow());
         auto state = glfwGetKey(window, keyCode);
         return state == GLFW_PRESS || state == GLFW_REPEAT;
     }
 
-    bool DefaultInputImpl::IsMouseButtonPressedImpl(int button)
+    bool DefaultInput::IsMouseButtonPressedImpl(int button)
     {
         auto window = static_cast<GLFWwindow*>(Application::Get().GetWindow()->GetNativeWindow());
         auto state = glfwGetMouseButton(window, button);
         return state == GLFW_PRESS;
     }
 
-    Vector2 DefaultInputImpl::GetMousePositionImpl()
+    Vector2 DefaultInput::GetMousePositionImpl()
     {
         auto window = static_cast<GLFWwindow*>(Application::Get().GetWindow()->GetNativeWindow());
         double xPos, yPos;
@@ -36,13 +36,13 @@ namespace Alpha
         return { (float) xPos, (float) yPos };
     }
 
-    float DefaultInputImpl::GetMouseXImpl()
+    float DefaultInput::GetMouseXImpl()
     {
         Vector2 position = GetMousePositionImpl();
         return position.x;
     }
 
-    float DefaultInputImpl::GetMouseYImpl()
+    float DefaultInput::GetMouseYImpl()
     {
         Vector2 position = GetMousePositionImpl();
         return position.y;
