@@ -3,10 +3,7 @@
 #include <Alpha/Core/CoreMinimal.h>
 
 #include <Alpha/Application/Application.h>
-#include <Alpha/Window/DefaultWindow/DefaultWindowImpl.h>
-
 #include <Alpha/Engine/Renderer/Renderer.h>
-#include <Alpha/Layer/Layer.h>
 
 #include <Sandbox/Sandbox.h>
 
@@ -15,8 +12,7 @@ int main(int argc, char *argv[])
     Alpha::Core::Init();
     Alpha::Renderer::Init();
 
-    auto window = Alpha::NewPointer<Alpha::DefaultWindowImpl>();
-	Alpha::Application application(window);
+	Alpha::Application application;
 
 	auto sandboxLayer = Alpha::NewPointer<Alpha::SandboxLayer>();
     auto sandboxGuiLayer = Alpha::NewPointer<Alpha::GuiSandboxLayer>();
